--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,12 @@
 
     <link rel="stylesheet" href="/css/main.css" />
 
-    <title>Harish Portfolio</title>
+    <title>Harish Kumar | Fullstack Developer Portfolio</title>
+    <meta name="description" content="Harish Kumar Fullstack Developer | DotNet | Angular | React | Bootstrap | SQL | MongoDB | WPF "/>
+    <meta property="og:title" content="Harish Kumar Fullstack Developer with 11+ years of experience" />
+    <meta property="og:description" content="Harish Kumar Fullstack Developer | DotNet | Angular | React | Bootstrap | SQL | MongoDB | WPF " />
+    <meta property="og:image" content="./static/images/profile.jpg" />
+
   </head>
 
   <body>
